# stochQN

./: .Rbuildignore  .gitattributes  .gitignore  CMakeLists.txt  DESCRIPTION  MANIFEST.in  NAMESPACE  README.md  pyproject.toml  requirements.txt  setup.py  stochqn.pc.in
R/: allocators.R  helpers.R  logistic.R  optimizers_free.R  optimizers_guided.R
docs/source/: conf.py  index.rst
example/: a.out  c_rosen.c  cpp_rosen.cpp  example_stochqn.ipynb
findBLAS/: README
include/: stochqn.h
inst/include/: stochqn.h
man/: SQN.Rd  SQN_free.Rd  adaQN.Rd  adaQN_free.Rd  coef.stoch_logistic.Rd  get_curr_x.Rd  get_iteration_number.Rd  oLBFGS.Rd  oLBFGS_free.Rd  partial_fit.Rd  partial_fit_logistic.Rd  predict.stochQN_guided.Rd  predict.stoch_logistic.Rd  print.SQN.Rd  print.SQN_free.Rd  print.adaQN.Rd  print.adaQN_free.Rd  print.oLBFGS.Rd  print.oLBFGS_free.Rd  print.stoch_logistic.Rd  run_SQN_free.Rd  run_adaQN_free.Rd  run_oLBFGS_free.Rd  stochastic.logistic.regression.Rd  summary.stoch_logistic.Rd  update_fun.Rd  update_gradient.Rd  update_hess_vec.Rd
src/: Makevars  Rwrapper.c  blas_R.h  blasfuns.h.in  rtd_mock.h  stochqn.c
stochqn/: __init__.py  _logistic.py  _optimizers.py  pywrapper.pxi  pywrapper.pyx  tf.py  wrapper_double.pyx  wrapper_float.pyx
